Add SEO meta tags, professional Islamic banner with Hijri and Gregorian dates

--- a/static/index.html
+++ b/static/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>زادي | Zadi — za-di.com</title>
-    <meta name="description" content="ورد عشوائي ذكي بناءً على حالتك النفسية - آيات قرآنية وأذكار مأثورة">
+    <title>زادي | Zadi — موقع إسلامي شامل | أذكار - قرآن - مواقيت الصلاة - المسبحة</title>
+    <meta name="description" content="زادي - تطبيق إسلامي شامل يقدم أذكار يومية، مشغل القرآن الكريم، مواقيت الصلاة، المسبحة الإلكترونية، أسماء الله الحسنى، أحاديث نبوية، واتجاه القبلة. صدقة جارية لأمي وأمهات المسلمين.">
+    <meta name="keywords" content="أذكار, أذكار يومية, قرآن, مواقيت الصلاة, مسبحة, تسبيح, أسماء الله الحسنى, أحاديث, قبلة, إسلام, مسلم, دعاء, zadi, za-di, زادي">
+    <meta name="author" content="زادي | Zadi">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="زادي | Zadi — موقع إسلامي شامل">
+    <meta property="og:description" content="تطبيق إسلامي شامل: أذكار، قرآن، مواقيت الصلاة، مسبحة، أسماء الله، أحاديث، قبلة">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.za-di.com">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Tajawal:wght@300;400;500;700&family=Amiri+Quran&display=swap" rel="stylesheet">
@@ -52,6 +60,28 @@
     </div>
 
     <div class="container">
+        <!-- ========== Professional Islamic Date Banner ========== -->
+        <div class="date-banner" id="dateBanner">
+            <div class="banner-content">
+                <div class="banner-left">
+                    <span class="banner-icon">🌙</span>
+                    <span class="hijri-date-banner" id="hijriDateBanner">جاري التحميل...</span>
+                </div>
+                <div class="banner-center">
+                    <span class="site-tagline">صدقة جارية تقنية 🤲</span>
+                </div>
+                <div class="banner-right">
+                    <span class="gregorian-date-banner" id="gregorianDateBanner"></span>
+                    <span class="banner-icon">📅</span>
+                </div>
+            </div>
+            <div class="banner-decoration">
+                <svg viewBox="0 0 100 10" preserveAspectRatio="none">
+                    <path d="M0,5 Q25,0 50,5 T100,5" fill="none" stroke="#c9a84c" stroke-width="0.5" opacity="0.3"/>
+                </svg>
+            </div>
+        </div>
+
         <!-- ========== Header with Islamic arch ========== -->
         <header class="header">
             <div class="logo-area">
