--- a/static/index.html
+++ b/static/index.html
@@ -232,58 +232,6 @@
             </div>
         </div>
 
-        <!-- ========== API Section ========== -->
-        <section class="api-section" id="apiSection">
-            <div class="api-toggle" onclick="toggleAPI()">
-                <span class="api-icon">⚡</span>
-                <span>للمطورين: استعمل الـ API الخاص بنا</span>
-                <svg class="chevron" id="apiChevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                </svg>
-            </div>
-            <div class="api-content" id="apiContent">
-                <div class="api-info">
-                    <h3>🔗 نقاط الوصول (Endpoints)</h3>
-                    <div class="endpoint">
-                        <div class="endpoint-header"><span class="method">GET</span><code>/api/random-dhikr</code></div>
-                        <p>ذكر عشوائي من جميع التصنيفات</p>
-                    </div>
-                    <div class="endpoint">
-                        <div class="endpoint-header"><span class="method">GET</span><code>/api/random-dhikr?category=stress</code></div>
-                        <p>ذكر عشوائي من تصنيف محدد: <code>stress</code> | <code>focus</code> | <code>gratitude</code> | <code>sleep</code></p>
-                    </div>
-                    <div class="endpoint">
-                        <div class="endpoint-header"><span class="method">GET</span><code>/api/categories</code></div>
-                        <p>قائمة جميع التصنيفات المتاحة</p>
-                    </div>
-                    <div class="endpoint">
-                        <div class="endpoint-header"><span class="method">GET</span><code>/api/generate-card?category=stress</code></div>
-                        <p>توليد بطاقة PNG (1080x1920) بذكر عشوائي 🖼️ <em>(يتطلب Go)</em></p>
-                    </div>
-                    <h3>💻 مثال استخدام</h3>
-                    <div class="code-block">
-                        <div class="code-header"><span>cURL</span><button class="copy-code-btn" onclick="copyCode(this)">نسخ</button></div>
-                        <pre><code>curl -s https://za-di.com/api/random-dhikr | jq .</code></pre>
-                    </div>
-                    <div class="code-block">
-                        <div class="code-header"><span>JavaScript</span><button class="copy-code-btn" onclick="copyCode(this)">نسخ</button></div>
-                        <pre><code>const res = await fetch('https://za-di.com/api/random-dhikr?category=sleep');
-const data = await res.json();
-console.log(data.text);</code></pre>
-                    </div>
-                    <div class="code-block">
-                        <div class="code-header"><span>Python</span><button class="copy-code-btn" onclick="copyCode(this)">نسخ</button></div>
-                        <pre><code>import requests
-r = requests.get('https://za-di.com/api/random-dhikr')
-print(r.json()['text'])</code></pre>
-                    </div>
-                    <div class="api-note">
-                        <p>🕊️ هذا المشروع <strong>صدقة جارية تقنية لأمي وأمهات المسلمين</strong> — استخدمه مجاناً في تطبيقاتك لنشر الخير</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- ========== Quran Player Section ========== -->
         <section class="quran-section" id="quranSection">
             <div class="section-toggle" onclick="toggleQuran()">
@@ -571,6 +519,58 @@ print(r.json()['text'])</code></pre>
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="3"/><path d="M12 2v4M12 18v4M2 12h4M18 12h4"/></svg>
                     تحديد اتجاه القبلة
                 </button>
+            </div>
+        </section>
+
+        <!-- ========== API Section (Last) ========== -->
+        <section class="api-section" id="apiSection">
+            <div class="api-toggle" onclick="toggleAPI()">
+                <span class="api-icon">⚡</span>
+                <span>للمطورين: استعمل الـ API الخاص بنا</span>
+                <svg class="chevron" id="apiChevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
+            </div>
+            <div class="api-content" id="apiContent">
+                <div class="api-info">
+                    <h3>🔗 نقاط الوصول (Endpoints)</h3>
+                    <div class="endpoint">
+                        <div class="endpoint-header"><span class="method">GET</span><code>/api/random-dhikr</code></div>
+                        <p>ذكر عشوائي من جميع التصنيفات</p>
+                    </div>
+                    <div class="endpoint">
+                        <div class="endpoint-header"><span class="method">GET</span><code>/api/random-dhikr?category=stress</code></div>
+                        <p>ذكر عشوائي من تصنيف محدد: <code>stress</code> | <code>focus</code> | <code>gratitude</code> | <code>sleep</code></p>
+                    </div>
+                    <div class="endpoint">
+                        <div class="endpoint-header"><span class="method">GET</span><code>/api/categories</code></div>
+                        <p>قائمة جميع التصنيفات المتاحة</p>
+                    </div>
+                    <div class="endpoint">
+                        <div class="endpoint-header"><span class="method">GET</span><code>/api/generate-card?category=stress</code></div>
+                        <p>توليد بطاقة PNG (1080x1920) بذكر عشوائي 🖼️ <em>(يتطلب Go)</em></p>
+                    </div>
+                    <h3>💻 مثال استخدام</h3>
+                    <div class="code-block">
+                        <div class="code-header"><span>cURL</span><button class="copy-code-btn" onclick="copyCode(this)">نسخ</button></div>
+                        <pre><code>curl -s https://za-di.com/api/random-dhikr | jq .</code></pre>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header"><span>JavaScript</span><button class="copy-code-btn" onclick="copyCode(this)">نسخ</button></div>
+                        <pre><code>const res = await fetch('https://za-di.com/api/random-dhikr?category=sleep');
+const data = await res.json();
+console.log(data.text);</code></pre>
+                    </div>
+                    <div class="code-block">
+                        <div class="code-header"><span>Python</span><button class="copy-code-btn" onclick="copyCode(this)">نسخ</button></div>
+                        <pre><code>import requests
+r = requests.get('https://za-di.com/api/random-dhikr')
+print(r.json()['text'])</code></pre>
+                    </div>
+                    <div class="api-note">
+                        <p>🕊️ هذا المشروع <strong>صدقة جارية تقنية لأمي وأمهات المسلمين</strong> — استخدمه مجاناً في تطبيقاتك لنشر الخير</p>
+                    </div>
+                </div>
             </div>
         </section>
 
