--- a/static/index.html
+++ b/static/index.html
@@ -259,11 +259,23 @@
                             <option value="Ahmed_ibn_Ali_al-Ajamy_128kbps_KetabAllah">أحمد بن علي العجمي</option>
                             <option value="Husary_128kbps">محمود خليل الحصري</option>
                             <option value="MaherAlMuaiqly128kbps">ماهر المعيقلي</option>
-                            <option value="Minshawy_Mujawwad_128kbps">محمد صديق المنشاوي</option>
+                            <option value="Minshawy_Mujawwad_128kbps">محمد صديق المنشاوي (مجود)</option>
+                            <option value="Minshawy_Murattal_128kbps">محمد صديق المنشاوي (مرتل)</option>
                             <option value="Muhammad_Ayyoub_128kbps">محمد أيوب</option>
                             <option value="Saood_ash-Shuraym_128kbps">سعود الشريم</option>
                             <option value="Abu_Bakr_Ash-Shaatree_128kbps">أبو بكر الشاطري</option>
                             <option value="Yasser_Ad-Dussary_128kbps">ياسر الدوسري</option>
+                            <option value="Ghamadi_128kbps">سعد الغامدي</option>
+                            <option value="Hudhaify_128kbps">علي الحذيفي</option>
+                            <option value="Ibrahim_Akhdar_128kbps">إبراهيم الأخضر</option>
+                            <option value="Khan_128kbps">عبد الله باسفر</option>
+                            <option value="Parhizgar_128kbps">شهريار برهزار</option>
+                            <option value="Sahih_Al-Bukhari_128kbps">صلاح البخاري</option>
+                            <option value="Shuraym_128kbps">سعود الشريم (رواية أخرى)</option>
+                            <option value="Siddiq_Minshawi_128kbps">سديق منشاوي (أطفال)</option>
+                            <option value="Tablawi_128kbps">محمد الطبلاوي</option>
+                            <option value="Wadee_Hammadi_128kbps">وديع حمادي</option>
+                            <option value="ayman_sowaid_128kbps">أيمن سويد</option>
                         </select>
                     </div>
                     <div class="control-group translation-group">
@@ -328,6 +340,63 @@
 
                 <!-- Audio Element -->
                 <audio id="quranAudio" preload="metadata"></audio>
+            </div>
+        </section>
+
+        <!-- ========== Full Quran Reading Section (Mushaf) ========== -->
+        <section class="mushaf-section" id="mushafSection">
+            <div class="section-toggle" onclick="toggleMushaf()">
+                <span class="section-icon">📚</span>
+                <span>المصحف الشريف — قراءة</span>
+                <svg class="chevron" id="mushafChevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
+            </div>
+            <div class="mushaf-content" id="mushafContent">
+                <!-- Mushaf Controls -->
+                <div class="mushaf-controls">
+                    <div class="control-group">
+                        <label for="mushafSurahSelect">اختر السورة</label>
+                        <select id="mushafSurahSelect" class="quran-select" onchange="loadMushafSurah()">
+                            <option value="">-- اختر سورة --</option>
+                        </select>
+                    </div>
+                    <div class="control-group">
+                        <label for="mushafPageInput">أو انتقل للصفحة</label>
+                        <input type="number" id="mushafPageInput" class="mushaf-input" min="1" max="604" placeholder="1-604" onchange="goToMushafPage(this.value)">
+                    </div>
+                </div>
+
+                <!-- Mushaf Display -->
+                <div class="mushaf-display" id="mushafDisplay">
+                    <div class="mushaf-header" id="mushafHeader">
+                        <span class="surah-name" id="mushafSurahName">اختر سورة للقراءة</span>
+                        <span class="page-number" id="mushafPageNumber"></span>
+                    </div>
+                    <div class="mushaf-bismillah" id="mushafBismillah">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</div>
+                    <div class="mushaf-text" id="mushafText">
+                        <p class="placeholder-text">اختر سورة لبدء القراءة من المصحف الشريف</p>
+                    </div>
+                    <div class="mushaf-juz-info" id="mushafJuzInfo"></div>
+                </div>
+
+                <!-- Navigation -->
+                <div class="mushaf-navigation">
+                    <button class="mushaf-nav-btn" id="prevPageBtn" onclick="prevMushafPage()" disabled>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
+                        الصفحة السابقة
+                    </button>
+                    <button class="mushaf-nav-btn" id="nextPageBtn" onclick="nextMushafPage()" disabled>
+                        الصفحة التالية
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/></svg>
+                    </button>
+                </div>
+
+                <!-- Surah List -->
+                <div class="mushaf-surah-list" id="mushafSurahList">
+                    <div class="list-title">فهرس السور</div>
+                    <div class="surah-grid" id="surahGrid"></div>
+                </div>
             </div>
         </section>
 
