--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Tajawal:wght@300;400;500;700&family=Amiri+Quran&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🕌</text></svg>">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#0a1628">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="زادي">
 </head>
 <body>
 
@@ -566,17 +572,18 @@
             <div class="radio-content" id="radioContent">
                 <div class="radio-controls">
                     <select id="countrySelect" class="radio-select" onchange="filterRadiosByCountry()">
-                        <option value="">جميع الدول</option>
-                        <option value="saudi">السعودية</option>
-                        <option value="egypt">مصر</option>
-                        <option value="uae">الإمارات</option>
-                        <option value="kuwait">الكويت</option>
-                        <option value="jordan">الأردن</option>
-                        <option value="morocco">المغرب</option>
-                        <option value="tunisia">تونس</option>
-                        <option value="algeria">الجزائر</option>
-                        <option value="qatar">قطر</option>
-                        <option value="bahrain">البحرين</option>
+                        <option value="">🌐 جميع الدول</option>
+                        <option value="saudi">🇸🇦 السعودية</option>
+                        <option value="egypt">🇪🇬 مصر</option>
+                        <option value="uae">🇦🇪 الإمارات</option>
+                        <option value="kuwait">🇰🇼 الكويت</option>
+                        <option value="jordan">🇯🇴 الأردن</option>
+                        <option value="morocco">🇲🇦 المغرب</option>
+                        <option value="tunisia">🇹🇳 تونس</option>
+                        <option value="algeria">🇩🇿 الجزائر</option>
+                        <option value="qatar">🇶🇦 قطر</option>
+                        <option value="bahrain">🇧🇭 البحرين</option>
+                        <option value="international">🌍 دولية</option>
                     </select>
                 </div>
                 <div class="radio-grid" id="radioGrid">
@@ -690,5 +697,12 @@ print(r.json()['text'])</code></pre>
     <canvas id="cardCanvas" width="1080" height="1920" style="display:none;"></canvas>
 
     <script src="app.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js').catch(() => {});
+            });
+        }
+    </script>
 </body>
 </html>
